# Samples

./: README.md
coding_interview_test/: CMakeLists.txt  elevator.cpp  test.cpp
hex_game/: CMakeLists.txt  hex_game.cpp
palindrome/: CMakeLists.txt  main.cpp  palindrome.h  tests.cpp
